--- a/carousel-image-vanilla-js/style.css
+++ b/carousel-image-vanilla-js/style.css
@@ -24,5 +24,26 @@ body {
 img {
     object-fit: cover;
     height: 500px;
-    width: 500px;
+  ////////////////
+/////////////////////
+///////////////////////
+/////////////////////////
+/////////////////
+/////////////
+///////////////////
+//////////////////////
+/////////////////////////
+///////////////////
+///////////////////////
+////////////////
+//////////////////////
+//////////////////
+////////////
+////////////
+////////////////////
+///////////////////
+///////////////
+/////////////////
+//////////////
+  width: 500px;
 }
